# libOdbDatabase

./: .gitlab-ci.yml  CMakeLists.txt  Database.hpp  DatabaseImpl.tpp  README.md  main.cpp
cmake/: FindODB.cmake  Function.cmake
config/: config.h
include/: Database.hpp
src/: DataBaseQuery.hpp  Database.cpp  DatabaseImpl.tpp  DatabaseManager.hpp
tests/: CMakeLists.txt  tests_main.cpp
tests/entities_database/: User.hpp
